unpackaged/main/default/objects/conference360__DataSyncRetry__c/conference360__DataSyncRetry__c.object-meta.xml
<CustomObject>
    <label>Data Sync Retry</label>
    <nameField>
        <displayFormat>DSR-{00000}</displayFormat>
        <label>Data Sync Retry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Sync Retries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>