unpackaged/main/default/objects/conference360__DataSyncRetry__c/fields/conference360__Attempt__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attempt__c</fullName>
    <label>Attempt</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>