unpackaged/main/default/objects/conference360__DataSyncRetry__c/fields/conference360__RecordIdForRetry__c.field-meta.xml
<CustomField>
    <fullName>conference360__RecordIdForRetry__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>