unpackaged/main/default/objects/conference360__DataSyncRetry__c/fields/conference360__Success__c.field-meta.xml
<CustomField>
    <fullName>conference360__Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>